--- a/Controls Gallery/ControlsGallery/ControlsGallery/MainPage.xaml
+++ b/Controls Gallery/ControlsGallery/ControlsGallery/MainPage.xaml
@@ -5,6 +5,8 @@
     xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
     xmlns:cards="clr-namespace:PanCardView;assembly=PanCardView"
     xmlns:controls="clr-namespace:EnigmatiKreations.Framework.Controls;assembly=EnigmatiKreations.Framework.Controls"
+    xmlns:floating="clr-namespace:EnigmatiKreations.Framework.Controls.Floating;assembly=EnigmatiKreations.Framework.Controls"
+    xmlns:xct="http://xamarin.com/schemas/2020/toolkit"
     BackgroundColor="{DynamicResource PrimaryColor}">
 
     <Grid ColumnDefinitions="Auto, Auto" RowDefinitions="Auto, *, Auto">
@@ -19,10 +21,19 @@
             <cards:CarouselView.ItemsSource>
                 <x:Array Type="{x:Type View}">
 
+                    <Path
+                        Data="M19,13H13V19H11V13H5V11H11V5H13V11H19V13Z"
+                        Fill="{DynamicResource AccentBrush}"
+                        HorizontalOptions="Center"
+                        Style="{StaticResource PlusSVG}"
+                        VerticalOptions="Center" />
+
                     <Button
                         HorizontalOptions="Center"
                         Text="Xamarin.Forms Button"
                         VerticalOptions="Center" />
+
+                    <floating:FloatingActionButton HorizontalOptions="Center" VerticalOptions="Center" />
 
                     <controls:FAB
                         ColorNormal="{DynamicResource AccentColor}"
@@ -63,13 +74,15 @@
                     </controls:FABMenu>
                 </x:Array>
             </cards:CarouselView.ItemsSource>
-            <Label
-                Grid.Row="2"
-                Grid.ColumnSpan="2"
-                HorizontalOptions="Center"
-                Text="{Binding CurrentControlType}"
-                VerticalOptions="Center" />
+
         </cards:CarouselView>
+        <Label
+            Grid.Row="2"
+            Grid.ColumnSpan="3"
+            HorizontalOptions="Center"
+            HorizontalTextAlignment="Center"
+            Text="{Binding CurrentControlType}"
+            VerticalOptions="Center" />
     </Grid>
 
 </ContentPage>
