--- a/Libraries/EnigmatiKreations.Framework/EnigmatiKreations.Framework.Controls/Shared/Icons/Icons.xaml
+++ b/Libraries/EnigmatiKreations.Framework/EnigmatiKreations.Framework.Controls/Shared/Icons/Icons.xaml
@@ -3,9 +3,14 @@
     x:Class="EnigmatiKreations.Framework.Controls.Icons"
     xmlns="http://xamarin.com/schemas/2014/forms"
     xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
+    xmlns:controls="clr-namespace:EnigmatiKreations.Framework.Controls"
     xmlns:d="http://xamarin.com/schemas/2014/forms/design"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     mc:Ignorable="d">
+
+    <ResourceDictionary.MergedDictionaries>
+        <controls:Themes />
+    </ResourceDictionary.MergedDictionaries>
 
     <Style
         x:Key="PlusSVG"
