--- a/Libraries/EnigmatiKreations.Framework/EnigmatiKreations.Framework.Controls/Shared/Controls/Floating/FloatingActionButton/Themes/Generic.xaml
+++ b/Libraries/EnigmatiKreations.Framework/EnigmatiKreations.Framework.Controls/Shared/Controls/Floating/FloatingActionButton/Themes/Generic.xaml
@@ -29,8 +29,9 @@
                                     x:Name="PART_Button"
                                     xct:TouchEffect.AnimationEasing="{x:Static Easing.CubicInOut}"
                                     xct:TouchEffect.NativeAnimationShadowRadius="15"
-                                    xct:TouchEffect.PressedAnimationDuration="150"
+                                    xct:TouchEffect.PressedAnimationDuration="100"
                                     xct:TouchEffect.PressedOpacity="0.8"
+                                    xct:TouchEffect.PulseCount="2"
                                     BackgroundColor="{DynamicResource AccentColor}"
                                     CornerRadius="100"
                                     HeightRequest="64"
