Finished adding label to FloatingActionButton

--- a/Controls Gallery/ControlsGallery/ControlsGallery/MainPage.xaml
+++ b/Controls Gallery/ControlsGallery/ControlsGallery/MainPage.xaml
@@ -24,6 +24,8 @@
             <cards:CarouselView.ItemsSource>
                 <x:Array Type="{x:Type View}">
 
+                    <floating:FloatingActionButton Detail="Button" />
+
                     <Path
                         Data="M19,13H13V19H11V13H5V11H11V5H13V11H19V13Z"
                         Fill="{DynamicResource AccentBrush}"
@@ -36,10 +38,7 @@
                         Text="Xamarin.Forms Button"
                         VerticalOptions="Center" />
 
-                    <floating:FloatingActionButton
-                        Detail="Button"
-                        HorizontalOptions="Center"
-                        VerticalOptions="Center" />
+
 
                     <controls:FAB
                         ColorNormal="{DynamicResource AccentColor}"
